# pdf-to-audiobook

./: .gitignore  PDF_to_Audiobook.py  Project Management & Sprint Documentation.gdoc  frm_Main.py  pdf2sound.py  pdftowav.py  pyproject.toml  readme.md  tasks.json
.github/: FUNDING.yml
frm_Main/: guispecification.txt  voices.txt
