[project]
name = "pdf-to-audiobook"
version = "0.1.0"
description = "Convert PDF documents to high-quality audiobooks using Kokoro TTS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Inner Ninja" }]
keywords = ["tts", "audiobook", "pdf", "kokoro", "text-to-speech"]

dependencies = [
    "pypdf>=5.0",
    "nltk>=3.8",
    "PyYAML>=6.0",              # still useful as fallback or for other YAML needs
    "tqdm>=4.66",
    "numpy>=1.26",
    "soundfile>=0.12",
    "pydub>=0.25",
    "kokoro>=0.9.4",            # main TTS engine
    "PySide6"
    # torch is intentionally not pinned here because users often choose CPU vs CUDA version
    # see installation instructions in README.md for torch install
]

[project.optional-dependencies]
parler = [
    "parler-tts @ git+https://github.com/huggingface/parler-tts.git",
    "transformers>=4.45",
]
dev = [
    "black>=24.0",
    "ruff>=0.6",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

# ────────────────────────────────────────────────
# Custom application settings (used by pdf_to_audiobook.py)
# ────────────────────────────────────────────────

[tool.pdf-to-audiobook]

[tool.pdf-to-audiobook.paths]
output = "audiobook.mp3"           # default output filename

[tool.pdf-to-audiobook.tts]
#engine = "parler"
engine = "kokoro"
voice = "af_heart"
lang_code = "a"
voices = [
	"af_heart",
	"af_bella",
	"af_nicole",
	"af_sarah",
	"af_sky",
	"af_jessica",
	"am_adam",
	"am_michael",
	"bf_emma",
	"bf_isabella",
	"bm_george",
	"bm_lewis",
]

[tool.pdf-to-audiobook.processing]
max_words_per_chunk = 350
pause_between_chunks_sec = 0.6

[tool.pdf-to-audiobook.external_tools]
ffmpeg  = ".\ffmpeg\bin\ffmpeg.exe"
ffprobe = ".\ffmpeg\bin\ffprobe.exe"
ffplay = ".\ffmpeg\bin\ffplay.exe"
